Fix IE overflow issue

--- a/index.css
+++ b/index.css
@@ -9,6 +9,7 @@ body {
 	-moz-user-select: none;
 	-ms-user-select: none;
 	user-select: none;
+	-ms-overflow-style: none;
 }
 
 svg {
